# ETLFrame

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  ReadMe.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
conf/base/: etl_config.yaml  etl_config_iceberg.yaml
conf/job/: job_config.yaml
etl_job/: __init__.py  elt_job.py
src/: main_stale.py
src/common/: constants.py  spark_session.py
src/core/: IETL.py
src/etl/: readers.py  writers.py
src/pythonproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/services/: CSVExtractor.py  ConfigReader.py  SparkExtractor.py  SparkTransformer.py  readers.py  spark_loader.py  writers.py
tests/unit/: test_config_reader.py  test_spark_session.py
