[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
[project.scripts]
test = "scripts.test:main"


[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "coverage>=7.10.6",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pyyaml>=6.0.2",
]
[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyspark==3.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
test = [
    "pytest>=8.4.2",
]

[tool.uv.build-backend]
module-root = ""
module-name = "src"
